--- a/md/1.2字符串（string）.md
+++ b/md/1.2字符串（string）.md
@@ -30,7 +30,7 @@
     b = 123aaa
      ^
     SyntaxError: invalid syntax
-	###SyntaxError就是类型错误，Python常见的错误
+	###SyntaxError就是语法错误，语法错误是初学者最常见的错误
 
 这里就直接报语法错误了，看看引起来的效果。
 
