--- a/md/1.2字符串（string）.md
+++ b/md/1.2字符串（string）.md
@@ -112,4 +112,4 @@
 	>>> print "my name is {name},{old} years okd" .format (name="LiLei",old=18)
 	my name is LiLei,18 years okd
 
-前者与占位符比较类似。
+format前者与占位符比较类似。
