--- a/md/1.3列表(list).md
+++ b/md/1.3列表(list).md
@@ -9,9 +9,9 @@ Python内置的一种数据类型是列表：list。list是一种有序的集合
 	>>> type(list1)
 	<type 'list'>
 
-列表(list)常用方法：
+###列表(list)常用方法：
 
-切片：可分为`正向索引`、`反向索引`、`默认索引`
+####切片：可分为`正向索引`、`反向索引`、`默认索引`
 
     先定义一个列表
     list = [1,2,3,4,5,6,7]
