--- a/md/1.3列表(list).md
+++ b/md/1.3列表(list).md
@@ -16,24 +16,24 @@ Python内置的一种数据类型是列表：list。list是一种有序的集合
     先定义一个列表
     list = [1,2,3,4,5,6,7]
     
-正向索引：取1到4，步长是1
+######正向索引：取1到4，步长是1
 
 	>>> list[0:4:1]
 	[1, 2, 3, 4]
 
-反向索引：取7到5，因为这里是反向，步长就是-1了
+######反向索引：取7到5，因为这里是反向，步长就是-1了
 
     >>> list[-1:-4:-1]
     [7, 6, 5]
 
-默认索引：取2,3,4,5,6,7
+######默认索引：取2,3,4,5,6,7
 
     >>> list[1:]
     [2, 3, 4, 5, 6, 7]
     >>> list[1::2]
     [2, 4, 6]
     
-取单独个数
+######取单独个数
 
     >>> list[0]
     1
